--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="layout-center-wrapper">
                 <ul class="top-menu">
                     <li><a class="active" href="#">Главная</a></li>
-                    <li><a href="#">О нас</a></li>
+                    <li><a href="#">Главная</a></li>
                     <li><a href="#">Новости</a></li>
                     <li><a href="#">Прайс-лист</a></li>
                     <li><a href="#">Магазин</a></li>
